# JuliaSetExplorer

./: Cargo.toml  README.md  build_web.sh  index.html  prepare_release.sh  req_anim_frame.js  req_anim_frame.wasm_bg.wasm
demo_server/: server.py
demo_server/web_app/: req_anim_frame.js
src/: .#main.rs  iterations.rs  josh_palette.rs  lib.rs  main.rs  mandelbrot.rs  simulation.rs
web_app/: Cargo.toml
web_app/src/: iterations.rs  lib.rs  simulation.rs
web_app/src/my_game/: mod.rs
web_app/src/web_setup/: error.rs  mod.rs
