[package]
name = "web_app"
version = "0.1.0"
authors = ["dc"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = [ "desktop" ]
web = [ "instant/wasm-bindgen", "minifb/web" ]
desktop = [ "minifb/default" ]


[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
instant = "0.1.12"
minifb = { git = 'https://github.com/emoon/rust_minifb.git', branch = 'master', default-features = false }
js-sys = "0.3.56"
wasm-rs-shared-channel = "0.1.0"
wasm-bindgen-futures = "0.4.29"
rayon = "1.5.1"
image = "0.24.5"
mandelbruhst-cli = "0.1.0"

# Set these to `false` when running on 32 bit platforms.
# there is a bug in wasm-pack https://github.com/rustwasm/wasm-pack/issues/974
[package.metadata.wasm-pack.profile.dev]
wasm-opt = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

